fixed height on mobile browsers

--- a/todo-app-react/src/Components/App.css
+++ b/todo-app-react/src/Components/App.css
@@ -11,6 +11,8 @@
 
   font-family: Arial, Helvetica, sans-serif;
   color: var(--theme-foreground-text);
+
+  overflow-y: scroll;
 }
 
 @media (min-width: 45em)
