--- a/todo-app-react/src/index.css
+++ b/todo-app-react/src/index.css
@@ -1,9 +1,15 @@
+html
+{
+  width: 100%;
+  height: 100%;
+}
+
 body 
 {
   margin: 0;
   
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   overflow: hidden;
 }
